policy/gatekeeper/constraints/require-hardened-container.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireHardenedContainer
metadata:
  name: require-hardened-container
spec:
  enforcementAction: deny
  match:
    namespaces: ["k3s-demo"]
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet"]
      - apiGroups: [""]
        kinds: ["Pod"]
